--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,6 +45,23 @@
         tools:text="nickname@gmail.com" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnStatistics"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_button_secondary"
+        android:fontFamily="@font/fira_sans_bold"
+        android:padding="8dp"
+        android:text="Statistics"
+        android:textAllCaps="false"
+        android:textColor="?colorOnSecondary"
+        android:textSize="20sp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSignOut"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSignOut"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="250dp"
