--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/fira_sans_bold"
         android:includeFontPadding="false"
-        android:text="Public Scoreboard"
+        android:text="@string/leaderboard"
         android:textAlignment="center"
         android:textColor="?colorOnPrimary"
         android:textSize="28sp"
@@ -55,7 +55,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="16dp"
-        android:background="@drawable/background_button"
+        android:background="@drawable/background_button_secondary"
         android:contentDescription="@string/desc_resume"
         android:padding="8dp"
         android:scaleType="fitCenter"
@@ -65,7 +65,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="?colorOnPrimary" />
+        app:tint="?colorOnSecondary" />
 
     <TextView
         android:id="@+id/tvPage"
@@ -80,15 +80,14 @@
         app:layout_constraintEnd_toStartOf="@+id/btnNextPage"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnPrevPage"
-        app:layout_constraintTop_toTopOf="@+id/btnNextPage"
-        tools:text="Page: 1" />
+        app:layout_constraintTop_toTopOf="@+id/btnNextPage" />
 
     <ImageButton
         android:id="@+id/btnNextPage"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_margin="16dp"
-        android:background="@drawable/background_button"
+        android:background="@drawable/background_button_secondary"
         android:contentDescription="@string/desc_resume"
         android:padding="8dp"
         android:scaleType="fitCenter"
@@ -97,6 +96,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tvPage"
-        app:tint="?colorOnPrimary" />
+        app:tint="?colorOnSecondary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
