--- a/app/src/main/res/layout/fragment_create_lobby.xml
+++ b/app/src/main/res/layout/fragment_create_lobby.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -81,6 +82,7 @@
             android:id="@+id/countdownSlider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/desc_countdown_slider"
             android:layout_weight="3"
             android:stepSize="1.0"
             android:value="3.0"
@@ -111,6 +113,7 @@
             android:id="@+id/playerLimitSlider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/desc_player_limit_slider"
             android:layout_weight="3"
             android:stepSize="1.0"
             android:value="2.0"
@@ -120,7 +123,6 @@
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchEnablePause"
-        android:visibility="gone"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/fira_sans"
@@ -130,7 +132,8 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        tools:ignore="RtlSymmetry" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnResetSettings"
