--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,12 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/background_button"
+        app:tint="?colorOnPrimary"
+        android:contentDescription="@string/desc_back"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_round_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_marginTop="64dp"
-        android:contentDescription="@string/desc_profile"
+        android:contentDescription="@string/desc_profile_image"
         android:src="@drawable/ic_round_account_circle_24"
         app:tint="?colorOnPrimary"
         app:layout_constraintEnd_toEndOf="parent"
