--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ivProfileImage"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:contentDescription="@string/desc_profile"
+        android:contentDescription="@string/desc_profile_image"
         android:src="@drawable/ic_round_account_circle_24"
         android:layout_marginVertical="4dp"
         app:tint="?colorOnPrimary"
