--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -104,7 +104,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnSignInGoogle"
+        android:id="@+id/btnSignUpGoogle"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
